--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     implementation platform('com.google.firebase:firebase-bom:28.2.0')
+
+    implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
 }
