--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TradeApplication">
-        <activity android:name=".chatdetail.ChatRoomActivity"/>
+        android:theme="@style/Theme.TradeApplication"
+        android:name=".TradeApplication">
+        <activity android:name=".gallery.GalleryActivity"/>
+        <activity android:name=".chatdetail.ChatRoomActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,9 +20,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".home.AddArticleActivity" />
+        <activity android:name=".photo.CameraActivity" />
+        <activity android:name=".photo.ImagePreviewListActivity" />
     </application>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 </manifest>
